--- a/src/components/Account/AccountMainted/AccountMainted.css
+++ b/src/components/Account/AccountMainted/AccountMainted.css
@@ -1,479 +1,5 @@
-.creator_account {
-  padding-top: 50px;
-  margin-top: 80px;
-}
-
-.creator_account_avatar {
-  background: url('../../../assets/img/creator_account_avatar_bg.png') no-repeat
-    center;
-  background-size: 100% 100%;
-  width: 156px;
-  height: 156px;
-  margin: 0 auto;
-  margin-top: -75px;
-  position: relative;
-  z-index: 1;
-  padding: 10px;
-}
-
-.creator_account_main_header {
-  position: relative;
-}
-
-.creator_account_main_header h6 span {
-  color: #000;
-  margin-right: 5px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: #000;
-}
-
-.dark .creator_account_main_header h6 span {
-  color: #fff;
-  background: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: #fff;
-}
-
-.img_line {
-  margin: 0 -30px;
-  position: relative;
-}
-
-.account_img_edit {
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  cursor: pointer;
-  width: 40px;
-  height: 40px;
-  background: #8d8ea4;
-  border: none;
-  outline: none;
-  border-radius: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.account_img_edit img {
-  width: 18px;
-  height: 18px;
-}
-
-.creator_account_main_header h6 {
-  top: 90px;
-  right: 0;
-  position: absolute;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 36px;
-  margin: 20px 0;
-  background: linear-gradient(
-    90deg,
-    #00fff0 -11.83%,
-    #063dff 46.29%,
-    #9206ff 107.6%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.creator_account_info {
-  max-width: 500px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.creator_account_info > span {
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  color: #000;
-}
-
-.dark .creator_account_info > span {
-  color: #fff;
-}
-
-.creator_account_info h4 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 64px;
-  color: #000;
-}
-
-.dark .creator_account_info h4 {
-  color: #ffffff;
-}
-
-.account_wallet {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 27px;
-  color: #000;
-  margin: 10px 0;
-}
-
-.dark .account_wallet {
-  color: #ffffff;
-}
-
-.account_balance {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-  margin-top: 10px;
-}
-.account_balance img {
-  margin-right: 10px;
-}
-
-.dark .account_balance {
-  color: #ffffff;
-}
-
-.account_info {
-  margin-top: 30px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 27px;
-  color: #000;
-}
-
-.dark .account_info {
-  color: #bbbbbb;
-}
-
-.account_links {
-  display: flex;
-  justify-content: center;
-}
-
-.account_links div {
-  display: flex;
-  flex-direction: column;
-  margin: 0 10px;
-}
-
-.account_links div span {
-  margin: 20px 0;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  color: #000;
-}
-.dark .account_links div span {
-  color: #fff;
-}
-
-.account_links div span i {
-  color: #36dafc;
-  font-style: normal;
-  padding-right: 5px;
-}
-
-.account_follow {
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.4s;
-  background: url('../../../assets/img/learn_more_button_bg.png') no-repeat
-    center;
-  background-size: contain;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 16px;
-  color: #ffffff;
-  cursor: pointer;
-  position: relative;
-  transition: opacity 0.4s;
-  width: 160px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
-.account_links div .account_share span,
-.account_links div .account_follow span {
-  font-size: 16px;
-}
-
-.account_share {
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.4s;
-  background: url('../../../assets/img/signup_button_bg.png') no-repeat center;
-  background-size: contain;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 16px;
-  color: #ffffff;
-  cursor: pointer;
-  position: relative;
-  transition: opacity 0.4s;
-  width: 160px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
-.account_share::before {
-  content: '';
-  background: url('../../../assets/img/learn_more_button_bg.png') no-repeat
-    center;
-  background-size: contain;
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.4s;
-}
-
-.account_follow::before {
-  content: '';
-  background: url('../../../assets/img/signup_button_bg.png') no-repeat center;
-  background-size: contain;
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.4s;
-}
-
-.account_follow:hover,
-.account_share:hover {
-  transition: 0.4s;
-  background: transparent;
-  color: #141233 !important;
-}
-
-.dark .account_follow:hover,
-.dark .account_share:hover {
-  transition: 0.4s;
-  background: transparent;
-  color: #fff !important;
-}
-
-.account_follow:hover::before,
-.account_share:hover::before {
-  transition: 0.4s;
-  opacity: 1;
-}
-
-.account_share span {
-  position: relative;
-  z-index: 2;
-}
-
-.creator_account_menu {
-  display: flex;
-  margin: 40px 0;
-  justify-content: center;
-  align-items: center;
-}
-
-.creator_account_menu a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.creator_account_menu button,
-.creator_account_menu a {
-  border: none;
-  background: none;
-  outline: none;
-}
-
-.creator_account_menu a.active {
-  background: url('../../../assets/img/mobile_profile_active.png') no-repeat
-    center;
-  background-size: 99% 99%;
-}
-
-.creator_account_menu button,
-.creator_account_menu a {
-  background: url('../../../assets/img/creator_account_menu_border.png')
-    no-repeat center;
-  background-size: 99% 99%;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 21px;
-  color: #000;
-  width: 150px;
-  height: 40px;
-  margin: 0 10px;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
-.creator_account_menu button span i,
-.creator_account_menu a span i {
-  font-style: normal;
-  color: #36dafc;
-}
-
-.dark .creator_account_menu button,
-.dark .creator_account_menu a {
-  color: #ffffff;
-}
-
-.creator_account_menu a::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: url('../../../assets/img/mobile_profile_active_before.png')
-    no-repeat center;
-  background-size: 100% 100%;
-  margin-left: 5px;
-  z-index: 1;
-  opacity: 0;
-  transition: 0.4s;
-}
-
-.creator_account_menu a.active::before {
-  opacity: 1;
-  margin-top: -5px;
-}
-
-.creator_account_main_block {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.creator_account_filter {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.creator_account_filter .header_search input {
-  width: 350px;
-  margin-left: 60px;
-}
-
-@media (max-width: 991.98px) {
-  .creator_account_main_header h6 span {
-    display: none;
-  }
-  .creator_account_filter .header_search {
-    display: block;
-    position: relative;
-    top: auto;
-    left: auto;
-    opacity: 1;
-    background: transparent;
-    width: auto;
-    height: auto;
-  }
-
-  .account_collection .creator_account_menu button,
-  .account_collection .creator_account_menu a {
-    font-size: 13px;
-  }
-}
-
 @media (max-width: 767.98px) {
-  .account_collection .creator_account_menu button,
-  .account_collection .creator_account_menu a {
-    width: 140px;
-    margin: 2px 8px;
-  }
-
-  .creator_account_filter .header_search {
-    width: 100%;
-  }
-  .creator_account_filter .header_search input {
-    width: 100%;
-    margin: 0;
-  }
-  .img_line {
-    margin: 0;
-  }
-  .creator_account_menu_wrapper {
-    overflow-x: scroll;
-  }
-
-  .creator_account_menu_wrapper::-webkit-scrollbar {
-    width: 0;
-  }
-  .creator_account_menu {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .creator_account_menu button {
-    margin: 10px;
-  }
-  .creator_account_main_header h6 {
-    font-size: 16px;
-    top: 30px;
-  }
-
-  .creator_account_avatar {
-    margin-top: -45px;
-  }
-  .account_links div span {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .img_line .account_img_edit {
+  .single_collection.account_minted .collection_right_block {
     display: none;
-  }
-
-  .img_line img {
-    height: 90px;
-    width: auto;
-  }
-  .creator_account_menu button {
-    margin: 2px;
-  }
-  .account_balance {
-    font-size: 16px;
-  }
-  .creator_account_avatar {
-    width: 80px;
-    height: 80px;
-  }
-}
-
-@media (max-width: 419.98px) {
-  .creator_account_main_header h6 {
-    font-size: 10px;
   }
 }
