--- a/src/components/Account/CollectionBlock/CollectionBlock.css
+++ b/src/components/Account/CollectionBlock/CollectionBlock.css
@@ -26,6 +26,7 @@
   padding: 10px;
   position: relative;
   margin: 10px 0;
+  cursor: pointer;
 }
 
 .marketplace_block:hover {
@@ -48,40 +49,13 @@
 }
 
 .marketplace_block_img img {
-  border-radius: 10px;
+  border-radius: 0;
   transition: 0.4s;
 }
 
 .marketplace_block_img img:hover {
   transform: scale(1.1);
   transition: 0.4s;
-}
-
-.marketplace_block_info {
-  background: #fff;
-  padding: 7px;
-  border-radius: 10px;
-  margin-top: 10px;
-  -webkit-clip-path: polygon(
-    0% 0%,
-    /* верхняя левая */ 0% 0%,
-    /* верхняя левая */ 100% 0%,
-    /* верхняя правая */ 100% 0%,
-    /* верхняя правая */ 100% 87%,
-    /* нижняя правая */ 96% 100%,
-    /* нижняя правая */ 0% 100%,
-    /* нижняя левая */ 0 100% /* нижняя левая */
-  );
-  clip-path: polygon(
-    0% 0%,
-    /* верхняя левая */ 0% 0%,
-    /* верхняя левая */ 100% 0%,
-    /* верхняя правая */ 100% 0%,
-    /* верхняя правая */ 100% 87%,
-    /* нижняя правая */ 96% 100%,
-    /* нижняя правая */ 0% 100%,
-    /* нижняя левая */ 0 100% /* нижняя левая */
-  );
 }
 
 .dark .marketplace_block_info {
@@ -102,9 +76,13 @@
   color: #fff;
 }
 
+.dark .account_collection .marketplace_block_footer span:nth-child(2) {
+  color: #7e7e7e;
+}
+
 .marketplace_block_footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .marketplace_block_footer span {
@@ -115,18 +93,15 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 14px;
-  color: #000;
+  color: #656565;
+  margin: 0 5px;
 }
 
 .dark .marketplace_block_footer span {
-  color: #ffffff;
+  color: #7e7e7e;
 }
 
-.dark .marketplace_block_footer span:nth-child(2) {
-  color: #0075ff;
-}
-
-.marketplace_block_info a {
+.marketplace_block_info > span {
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
@@ -136,6 +111,8 @@
   cursor: pointer;
   margin: 5px 0;
   display: block;
+  text-align: center;
+  margin: 10px 0 5px;
 }
 
 .marketplace_block_footer .count {
@@ -151,11 +128,13 @@
   background: url('../../../assets/img/collection_block_border.png') no-repeat
     center;
   background-size: 99% 99%;
-  padding-top: 15px;
+  padding-top: 10px;
 }
 
 .collection_block_wrapper .marketplace_block_info {
   position: relative;
+  background: none !important;
+  margin-top: 0;
 }
 
 .collection_block_wrapper .marketplace_block_info img.status {
@@ -165,7 +144,29 @@
 }
 
 .collection_block_wrapper .marketplace_block_info h6 {
-  max-width: 90%;
+  text-align: center;
+}
+
+.collection_block_ava {
+  background: url('../../../assets/img/colection_ava.png') no-repeat center;
+  background-size: 99% 99%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  position: relative;
+  margin: -30px auto 0;
+}
+
+.dark .collection_block_ava {
+  background: url('../../../assets/img/colection_ava_dark.png') no-repeat center;
+  background-size: 99% 99%;
+}
+
+.collection_block_ava img {
+  max-width: 50px;
 }
 
 @media (max-width: 991.98px) {
