add selected page and fix single create

--- a/src/components/Account/AccountCurrently/AccountCurrently.css
+++ b/src/components/Account/AccountCurrently/AccountCurrently.css
@@ -675,6 +675,8 @@
 
   .creator_account_menu_wrapper::-webkit-scrollbar {
     width: 0;
+    opacity: 0;
+    height: 0;
   }
   .creator_account_menu {
     width: -webkit-fit-content;
