--- a/src/components/Account/SingleCreator/SingleCreator.css
+++ b/src/components/Account/SingleCreator/SingleCreator.css
@@ -346,6 +346,9 @@ div[class*='-menu'] span {
   .single_collection .creator_account_search {
     width: 40%;
   }
+  .single_collection_info_block {
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -427,7 +430,6 @@ div[class*='-menu'] span {
   }
   .single_collection_info_block {
     padding: 10px 0;
-    margin-bottom: 10px;
   }
   .single_collection_info_block div span {
     font-size: 18px;
