--- a/src/components/Account/ContentBlock/ContentBlock.css
+++ b/src/components/Account/ContentBlock/ContentBlock.css
@@ -25,18 +25,21 @@
 .marketplace_block_wrapper.content_block
   .marketplace_block
   .marketplace_block_footer {
-  justify-content: end;
+  justify-content: flex-end;
+  display: -webkit-flex;
+  -webkit-justify-content: flex-end;
   width: 100%;
+  min-width: 100%;
 }
 
-.mint {
+.marketplace_block_wrapper.content_block .mint {
   border: none;
   background: none;
   outline: none;
   margin-top: -15px;
 }
 
-.mint {
+.marketplace_block_wrapper.content_block .mint {
   border: none;
   outline: none;
   cursor: pointer;
@@ -53,14 +56,12 @@
   cursor: pointer;
   position: relative;
   transition: opacity 0.4s;
-  width: 80px;
+  width: 70px;
   height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
 }
 
-.mint::before {
+.marketplace_block_wrapper.content_block .mint::before {
   content: '';
   background: url('../../../assets/img/signup_button_bg.png') no-repeat center;
   background-size: contain;
@@ -78,25 +79,29 @@
   height: auto;
 }
 
-.mint:hover {
+.marketplace_block_wrapper.content_block .mint:hover {
   transition: 0.4s;
   background: transparent;
   color: #141233 !important;
 }
 
-.dark .mint:hover {
+.dark .marketplace_block_wrapper.content_block .mint:hover {
   transition: 0.4s;
   background: transparent;
   color: #fff !important;
 }
 
-.mint:hover::before {
+.marketplace_block_wrapper.content_block .mint:hover::before {
   transition: 0.4s;
   opacity: 1;
 }
 
 @media (max-width: 575.98px) {
-  .two_rows .marketplace_block_wrapper.content_block .marketplace_block .mint {
+  .two_rows
+    .marketplace_block_wrapper.content_block
+    .marketplace_block
+    .marketplace_block_wrapper.content_block
+    .mint {
     margin-top: 5px;
   }
 
@@ -106,5 +111,9 @@
   .two_rows.creator_account_main_block
     .marketplace_block_wrapper.content_block {
     margin: 0;
+  }
+
+  .two_rows .marketplace_block_wrapper.content_block .mint {
+    margin-top: 0;
   }
 }
